Adding 5 day forecast functionality

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                             <li>UV Index: <span id="currentUV"></span></li>
                         </ul>
                     </div>
-                    <div class="col border border-primary">
-                        Next 5 days
+                    <div id="forecastWeather" class="col border border-primary">
                     </div>
                     
                 </div>
